--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,27 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Tables Page</title>
+  <title>FriendFinder Survey</title>
 
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </head>
+
 <body>
+  <div class="container">
+    <form>
+      <div class="form-group">
+        <label for="formGroupExampleInput">Your Name:</label>
+        <input type="text" class="form-control" id="friendName" placeholder="First Name">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2">Photo URL:</label>
+        <input type="text" class="form-control" id="friendPhoto" placeholder="https:/www.myphoto.com/pic.jpg">
+      </div>
 
+      <h3>Question 1</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question1">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+
+      <h3>Question 2</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question2">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+
+      <h3>Question 3</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question3">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+
+      <h3>Question 4</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question4">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+
+      <h3>Question 5</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question5">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+
+      <h3>Question 6</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question6">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+
+      <h3>Question 7</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question7">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+
+      <h3>Question 8</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question8">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+
+      <h3>Question 9</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question9">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+
+      <h3>Question 10</h3>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+      <div class="form-group">
+        <select class="form-control" id="question10">
+          <option value></option>
+          <option value="1">1 Strongly Disagree</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 Strongly Agree</option>
+        </select>
+      </div>
+    </form>
+  </div>
 </body>
-
 
 <!-- BELOW CODE IS CRITICAL. IT HANDLES HOW FORM DATA IS LOADED FROM OUR SERVER -->
 <script type="text/javascript">
-  function friendFinder() {
-    // Here we get the location of the root page.
-    // We use this instead of explicitly saying the URL is localhost:3001 because the url will change when we deploy.
-    let currentURL = window.location.origin;
-  }
+  // In this code below we create the Front-end JavaScript which "POSTS" our form data to our express server.
+  // In essence, when the user hits submit, jQuery grabs all of the fields then sends a post request to our api
+  // Our api recognizes the route (/api/tables)... and then runs the associated code (found in api-routes.js).
+  // In this case the associated code "saves" the data to the table-data.js file or waitinglist-data.js file
+
+  $(".submit").on("click", function (event) {
+    event.preventDefault();
+
+    // grab the user inputs
+    let newFriend = {
+      name: $("#friendName").val().trim(),
+      photo: $("#friendPhoto").val(),
+      scores: [
+        $("#question1").val(),
+        $("#question2").val(),
+        $("#question3").val(),
+        $("#question4").val(),
+        $("#question5").val(),
+        $("#question6").val(),
+        $("#question7").val(),
+        $("#question8").val(),
+        $("#question9").val(),
+        $("#question10").val()
+      ]
+    };
+    console.log(newFriend);
+
+    // This line is the magic. It"s very similar to the standard ajax function we used.
+    // Essentially we give it a URL, we give it the object we want to send, then we have a "callback".
+    // The callback is the response of the server. In our case, we set up code in api-routes that "returns" true or false
+    // depending on if a tables is available or not.
+
+    $.post("/api/friends", newFriend, function (data) {
+
+      // Clear the form when submitting
+      // $("#friend-name").val("");
+      // $("#friend-photo").val("");
+      // $("#friend-scores").val("");
+
+    });
+
+  });
 </script>
+
 </html>
