--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,20 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>FriendFinder Home</title>
 
-  <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-</head>
-<body>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+
+
   <div class="container">
+
     <div class="jumbotron">
-      <h1>Friend Finder</h1>
+      <h1 class="text-center">
+        <span class="friendFinder"></span>Friend Finder</h1>
+      <hr>
+      <h2 class="text-center">Answer a few basic questions. </h2>
+      <h2 class="text-center">Then find the friend with the greatest compatibility!</h2>
+      <br>
+
+      <div class="text-center">
+        <a href="/survey">
+          <button class="btn btn-lg btn-danger">
+            <span class="survey"></span> Go to Survey</button>
+        </a>
+      </div>
+
     </div>
-  </div>
-</body>
+
+
+    <footer class="footer">
+      <div class="container">
+        <p>
+          <a href="/api/friends">API Friends List</a> |
+          <a href="https://github.com/enriquelopez80/FriendFinder">GitHub Repo</a>
+        </p>
+      </div>
+    </footer>
+
+    </body>
+
+</html>
