--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,208 +1,274 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>FriendFinder Survey</title>
 
-  <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 
+  <title>Survey Page</title>
 </head>
 
 <body>
+
   <div class="container">
-    <form>
-      <div class="form-group">
-        <label for="formGroupExampleInput">Your Name:</label>
-        <input type="text" class="form-control" id="friendName" placeholder="First Name">
-      </div>
-      <div class="form-group">
-        <label for="formGroupExampleInput2">Photo URL:</label>
-        <input type="text" class="form-control" id="friendPhoto" placeholder="https:/www.myphoto.com/pic.jpg">
-      </div>
 
-      <h3>Question 1</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question1">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
-      </div>
+    <h1>Survey Questions</h1>
+    <hr>
 
-      <h3>Question 2</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question2">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
-      </div>
+    <div class="row">
+      <div class="col-lg-12">
 
-      <h3>Question 3</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question3">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
-      </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">About You</h4>
+          </div>
+          <div class="panel-body">
 
-      <h3>Question 4</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question4">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
-      </div>
+            <div class="form-group">
+              <label for="friend-name">Name</label>
+              <input type="text" class="form-control" id="friend-name">
+            </div>
 
-      <h3>Question 5</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question5">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
-      </div>
+            <div class="form-group">
+              <label for="friend-name">Link to Your Photo</label>
+              <input type="text" class="form-control" id="friend-photo">
+            </div>
 
-      <h3>Question 6</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question6">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
-      </div>
+            <hr>
 
-      <h3>Question 7</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question7">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
-      </div>
+            <h4>Question 1</h4>
+            <hr>
+            <h5>You love the beach.</h5>
+            <div class="form-group">
+              <select class="form-control" id="q1">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
+            <h4>Question 2</h4>
+            <hr>
+            <h5>You like Chocolate.</h5>
+            <div class="form-group">
+              <select class="form-control" id="q2">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
+            <h4>Question 3</h4>
+            <hr>
+            <h5>You enjoy country music.</h5>
+            <div class="form-group">
+              <select class="form-control" id="q3">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
+            <h4>Question 4</h4>
+            <hr>
+            <h5>You think ping pong is awesome.</h5>
+            <div class="form-group">
+              <select class="form-control" id="q4">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
+            <h4>Question 5</h4>
+            <hr>
+            <h5>You like walks in the park.</h5>
+            <div class="form-group">
+              <select class="form-control" id="q5">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
+            <h4>Question 6</h4>
+            <hr>
+            <h5>You love going to Las Vegas to gamble.</h5>
+            <div class="form-group">
+              <select class="form-control" id="q6">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
+            <h4>Question 7</h4>
+            <hr>
+            <h5>You like sports.</h5>
+            <div class="form-group">
+              <select class="form-control" id="q7">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
+            <h4>Question 8</h4>
+            <hr>
+            <h5>You like dogs.</h5>
+            <div class="form-group">
+              <select class="form-control" id="q8">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
+            <h4>Question 9</h4>
+            <hr>
+            <h5>You like traveling.</h5>
+            <div class="form-group">
+              <select class="form-control" id="q9">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
+            <h4>Question 10</h4>
+            <hr>
+            <h5>You like to party!</h5>
+            <div class="form-group">
+              <select class="form-control" id="q10">
+                <option value></option>
+                <option value="1">1 Strongly Disagree</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 Strongly Agree</option>
+              </select>
+            </div>
 
-      <h3>Question 8</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question8">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
-      </div>
+            <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit">
+              <i class="fa fa-check-circle" aria-hidden="true"></i>
+              Submit</button>
 
-      <h3>Question 9</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question9">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
-      </div>
+          </div>
+        </div>
 
-      <h3>Question 10</h3>
-      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-      <div class="form-group">
-        <select class="form-control" id="question10">
-          <option value></option>
-          <option value="1">1 Strongly Disagree</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5 Strongly Agree</option>
-        </select>
       </div>
-    </form>
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+        <p>
+          <a href="/api/friends">API Friends List</a> |
+          <a href="https://github.com/nickfp1985/friendfinder">GitHub Repo</a>
+        </p>
+      </div>
+    </footer>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"
+    style="display:none;">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Your Best Match!</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <h2 id="matchName"></h2>
+          <img id="matchPic" src="">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
+</html>
 
-<!-- BELOW CODE IS CRITICAL. IT HANDLES HOW FORM DATA IS LOADED FROM OUR SERVER -->
 <script type="text/javascript">
-  // In this code below we create the Front-end JavaScript which "POSTS" our form data to our express server.
-  // In essence, when the user hits submit, jQuery grabs all of the fields then sends a post request to our api
-  // Our api recognizes the route (/api/tables)... and then runs the associated code (found in api-routes.js).
-  // In this case the associated code "saves" the data to the table-data.js file or waitinglist-data.js file
-
-  $(".submit").on("click", function (event) {
-    event.preventDefault();
-
-    // grab the user inputs
-    let newFriend = {
-      name: $("#friendName").val().trim(),
-      photo: $("#friendPhoto").val(),
-      scores: [
-        $("#question1").val(),
-        $("#question2").val(),
-        $("#question3").val(),
-        $("#question4").val(),
-        $("#question5").val(),
-        $("#question6").val(),
-        $("#question7").val(),
-        $("#question8").val(),
-        $("#question9").val(),
-        $("#question10").val()
-      ]
-    };
-    console.log(newFriend);
-
-    // This line is the magic. It"s very similar to the standard ajax function we used.
-    // Essentially we give it a URL, we give it the object we want to send, then we have a "callback".
-    // The callback is the response of the server. In our case, we set up code in api-routes that "returns" true or false
-    // depending on if a tables is available or not.
-
-    $.post("/api/friends", newFriend, function (data) {
-
-      // Clear the form when submitting
-      // $("#friend-name").val("");
-      // $("#friend-photo").val("");
-      // $("#friend-scores").val("");
-
+  $(document).ready(function () {
+    $("#submit").on("click", function (event) {
+      event.preventDefault();
+      // Here we grab the form elements
+      let newFriend = {
+        name: $("#friend-name").val().trim(),
+        photo: $("#friend-photo").val().trim(),
+        scores: [
+          $("#q1").val().trim(),
+          $("#q2").val().trim(),
+          $("#q3").val().trim(),
+          $("#q4").val().trim(),
+          $("#q5").val().trim(),
+          $("#q6").val().trim(),
+          $("#q7").val().trim(),
+          $("#q8").val().trim(),
+          $("#q9").val().trim(),
+          $("#q10").val().trim(),
+        ]
+      }
+      $.ajax({
+        type: 'POST',
+        url: "/api/friends",
+        data: newFriend,
+        success: function (res) {
+          console.log("success!")
+          let name = res.name
+          let photo = res.photo
+          $("#matchName").text(name)
+          $("#matchPic").attr("src", photo)
+          $("#resultsModal").modal("toggle")
+          // Clear the form when submitting
+          $("#friend-name").val("");
+          $("#friend-photo").val("");
+          $("#friend-scores").val("");
+          $("#q1").val("");
+          $("#q2").val("");
+          $("#q3").val("");
+          $("#q4").val("");
+          $("#q5").val("");
+          $("#q6").val("");
+          $("#q7").val("");
+          $("#q8").val("");
+          $("#q9").val("");
+          $("#q10").val("");
+        }
+      });
+      console.log(newFriend);
     });
-
   });
 </script>
-
-</html>
