--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -47,7 +47,7 @@
 
             <h4>Question 1</h4>
             <hr>
-            <h5>You love the beach.</h5>
+            <h5>You like dogs.</h5>
             <div class="form-group">
               <select class="form-control" id="q1">
                 <option value></option>
@@ -60,7 +60,7 @@
             </div>
             <h4>Question 2</h4>
             <hr>
-            <h5>You like Chocolate.</h5>
+            <h5>You like cats.</h5>
             <div class="form-group">
               <select class="form-control" id="q2">
                 <option value></option>
@@ -73,7 +73,7 @@
             </div>
             <h4>Question 3</h4>
             <hr>
-            <h5>You enjoy country music.</h5>
+            <h5>You enjoy trying new food.</h5>
             <div class="form-group">
               <select class="form-control" id="q3">
                 <option value></option>
@@ -86,7 +86,7 @@
             </div>
             <h4>Question 4</h4>
             <hr>
-            <h5>You think ping pong is awesome.</h5>
+            <h5>You enjoy physical activities.</h5>
             <div class="form-group">
               <select class="form-control" id="q4">
                 <option value></option>
@@ -99,7 +99,7 @@
             </div>
             <h4>Question 5</h4>
             <hr>
-            <h5>You like walks in the park.</h5>
+            <h5>You like being outside of your comfort areas.</h5>
             <div class="form-group">
               <select class="form-control" id="q5">
                 <option value></option>
@@ -112,7 +112,7 @@
             </div>
             <h4>Question 6</h4>
             <hr>
-            <h5>You love going to Las Vegas to gamble.</h5>
+            <h5>You like traveling to new places.</h5>
             <div class="form-group">
               <select class="form-control" id="q6">
                 <option value></option>
@@ -138,7 +138,7 @@
             </div>
             <h4>Question 8</h4>
             <hr>
-            <h5>You like dogs.</h5>
+            <h5>You like being in water, swimming.</h5>
             <div class="form-group">
               <select class="form-control" id="q8">
                 <option value></option>
@@ -151,7 +151,7 @@
             </div>
             <h4>Question 9</h4>
             <hr>
-            <h5>You like traveling.</h5>
+            <h5>You like romantic movies.</h5>
             <div class="form-group">
               <select class="form-control" id="q9">
                 <option value></option>
@@ -164,7 +164,7 @@
             </div>
             <h4>Question 10</h4>
             <hr>
-            <h5>You like to party!</h5>
+            <h5>You like to attend social events.</h5>
             <div class="form-group">
               <select class="form-control" id="q10">
                 <option value></option>
